--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "com.psa.rxvolleylistener"
+        applicationId "com.psa.rxvolleylistener.sample"
         minSdkVersion 15
         targetSdkVersion 26
         versionCode 1
@@ -31,10 +31,13 @@ dependencies {
     implementation 'com.android.volley:volley:1.0.0'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.5'
     implementation 'io.reactivex.rxjava2:rxkotlin:2.1.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.9.0'
+    implementation 'com.squareup.okhttp3:okhttp-urlconnection:3.9.0'
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.robolectric:robolectric:3.5'
-    testImplementation 'org.robolectric:shadows-httpclient:3.4-rc2'
+    testImplementation 'org.robolectric:shadows-httpclient:3.5'
     testImplementation 'io.kotlintest:kotlintest:2.0.7'
+    testImplementation 'com.squareup.okhttp3:mockwebserver:3.9.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 }
